[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[dependencies]
# The interface to talk to the bootloader
limine = "0.3" 
# For low-level memory operations
volatile = "0.6"
lazy_static = "1.5.0"
spin = "0.9.8"

[profile.dev]
panic = "abort" # If we crash, just stop. Don't unwind.

[profile.release]
panic = "abort"